sfdx-source/force-app/main/default/objects/Brand_Goal_Adjustment__c/Brand_Goal_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Brand Goal Adjustment</label>
    <nameField>
        <displayFormat>GA{00000}</displayFormat>
        <label>Goal Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Goal Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>