sfdx-source/force-app/main/default/objects/Brand_Goal_Adjustment__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>&quot;Do not enter&quot;</defaultValue>
    <description>the unique id for the record that will be imported</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>