sfdx-source/force-app/main/default/objects/Brand_Goal_Adjustment__c/fields/Total_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment__c</fullName>
    <description>Total adjustment is the sum of week 1 to week 14 adjustment %</description>
    <formula>(Week1_Ramp__c +  Week2_Ramp__c + Week3_Ramp__c + Week4_Ramp__c + Week5_Ramp__c + Week6_Ramp__c + Week7_Ramp__c + Week8_Ramp__c + Week9_Ramp__c + Week10_Ramp__c + Week11_Ramp__c + Week12_Ramp__c + Week13_Ramp__c + Week14_Ramp__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>