sfdx-source/force-app/main/default/objects/Brand_Goal_Adjustment__c/fields/Week11_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Week11_Ramp__c</fullName>
    <description>adjustment percentage for week 11 of the quarter</description>
    <label>Week11 Ramp</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>