sfdx-source/force-app/main/default/objects/Brand_Goal_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Group_Name__c</columns>
    <columns>Business_Group_Id__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Total_Adjustment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>